--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   provider: ^6.0.5
   http: ^1.1.0
   flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.8
+  lottie: ^2.6.0
+  cached_network_image: ^3.3.0
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
