--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   lottie: ^2.6.0
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 
 dev_dependencies:
@@ -42,6 +43,7 @@ flutter:
   assets:
     - assets/svgs/
     - assets/lottie/
+    - assets/images/
 
 
   fonts:
