--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
   flutter_launcher_icons: ^0.13.1
+  mockito: ^5.4.2
 
 
 dev_dependencies:
